# shop-timer

./: .clang-format  .gitignore  .project_env  CMakeBuildOpts.txt  CMakeLists.txt  LICENSE  Makefile  README.md  README.md.backup  action_dialogs.py  action_table.py  actions_dialogs.py  assembly_dialogs.py  assembly_table.py  data_store.py  database.py  dialogs.py  main.py  main_frame.py  notes.txt  part_dialogs.py  part_table.py  parts_dialogs.py  shop-timer.db  tables.py  timer_dialogs.py  timer_instance_table.py  timer_table.py
.theia/: settings.json
docs/: CMakeLists.txt  NOTES.md  README.md  doxygen.cfg
scripts/: PROJECT_NAME  README.md  build  clean  rebuild  setup
src/: CMakeLists.txt
src/common/: CMakeLists.txt  alloc.c  alloc.h  array.c  array.h  cmdline.c  cmdline.h  common.h  dl_list.c  dl_list.h  errors.h  fileio.c  fileio.h  hash.c  hash.h  pointer_list.c  pointer_list.h  ptr_list.c  ptr_list.h  strg_list.c  strg_list.h  strgs.c  strgs.h  string_buffer.c  string_buffer.h  string_list.c  string_list.h  trace.c  trace.h
src/main/: CMakeLists.txt  main.c
tests/: README.md
